# customer_service_agent

./: .gitignore  APPLICATION_FLOW.md  ARCHITECTURE.md  DATA_PROVIDER_README.md  DEVELOPMENT.md  MULTI_TURN_PLANNING_README.md  Makefile  PLANNING_ARCHITECTURE.md  PLAN_EXECUTION_README.md  README.md  config.template  debug_planner_issue.py  debug_planning_issue.py  debug_prompt_issue.py  debug_simple_case.py  main.py  pyproject.toml  requirements.txt  setup.sh  test_agent_integration.py  test_autonomous_continuation.py  test_basic_consolidated_system.py  test_check_tools.py  test_comprehensive_agent.py  test_context_consolidation.py  test_context_conversation.py  test_continuation_response.py  test_conversation_fixes.py  test_conversation_flow_fix.py  test_dual_llm.py  test_greeting_fix.py  test_multiple_products.py  test_refined_catalog.py  test_system.py  test_system_wide.py  test_tools_individual.py
data/: ProductCatalog.json
scripts/: ruff.sh
src/sierra_agent/: __init__.py
src/sierra_agent/ai/: __init__.py  context_builder.py  llm_client.py  llm_service.py  llm_service_backup.py  prompt_templates.py  prompt_types.py
src/sierra_agent/analytics/: __init__.py  conversation_analytics.py  quality_scorer.py
src/sierra_agent/core/: __init__.py  adaptive_planning_service.py  agent.py  conversation.py  planning_service.py  planning_types.py
src/sierra_agent/data/: __init__.py  data_provider.py  data_types.py
src/sierra_agent/tools/: __init__.py  base_tool.py  business_tools.py  catalog_tools.py  order_tools.py  plan_executor.py  planning_engine.py  tool_orchestrator.py
src/sierra_agent/utils/: __init__.py  branding.py  error_messages.py
tests/: __init__.py  conftest.py  test_agent_integration.py  test_data_types.py  test_order_system.py
